[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loss_library_lj"
version = "0.0.3"
authors = [
  { name="Lorenzo Flores", email="lj.flores@yale.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "torch",
  "spacy",
  "scispacy"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"