[tool.poetry]
name = "loss-library"
version = "0.1.0"
description = ""
authors = ["Lorenzo Flores (Lj) <47231323+ljyflores@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "loss_library", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "2.0.3"
numpy = "1.24.4"
transformers = "^4.36.2"
scispacy = "0.5.3"
torch = "2.1.2"
spacy = "3.6.1"
en_core_web_lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.6.0/en_core_web_lg-3.6.0-py3-none-any.whl"}
en_core_sci_lg = {url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.3/en_core_sci_lg-0.5.3.tar.gz"}
nmslib = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
